<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
    	
  <groupId>com.shoppingcenter</groupId>
  <artifactId>shoppingcenter-backend</artifactId>
  <version>1.0.0</version>
  <packaging>pom</packaging>
  
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.0.2</version>
    <relativePath/>
    <!-- lookup parent from repository -->
  </parent>
  
  <properties>
    <java.version>17</java.version>
  </properties>
    	
  <modules>
    <module>shoppingcenter-data</module>
    <module>shoppingcenter-service</module>
    <module>shoppingcenter-application</module>
    <module>shoppingcenter-search</module>
    <module>shoppingcenter-domain</module>
  </modules>
    	
	
  
  <dependencies>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <optional>true</optional>
    </dependency>
  </dependencies>
</project>
